bynkc/tests/fixtures/positive/216_cross_context_caller/src/app/b.bynk
context app.b

-- A cross-context callee that reads *who* called it: `by c: Caller` binds the
-- live CallerId (the calling context's name, v0.54), threaded over the
-- Service Binding's X-Bynk-Caller header.
service whoami {
  on call (ping: String) -> Effect[Result[String, String]] by c: Caller {
    Ok(c.identity)
  }
}
