bynkc/tests/fixtures/negative/231_caller_not_on_call/src/demo.bynk
context demo

service jobs from cron {
  on schedule("* * * * *") () -> Effect[Result[(), String]] by c: Caller {
    Ok(())
  }
}
